objects/LBI__APISettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Houses information regarding the Lattice Application&apos;s API interactions.</description>
    <fields>
        <fullName>LBI__Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The maximum number of times the batch data retrieve jobs will retry when unforeseen errors occur.</description>
        <inlineHelpText>The maximum number of times the batch data retrieve jobs will retry when unforeseen errors occur.</inlineHelpText>
        <label>Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__MaximumPagesPerBatchPull__c</fullName>
        <description>This setting governs how many total pages to generate in API data retrieval jobs.  9000 is a good number and stays under the 10k DML limit.  Edit if you want less for some reason, or if SFDC changes the governor.</description>
        <label>Maximum Pages Per Batch Pull</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Holds the actual number of times the API has retried.  Do not edit this field manually.</description>
        <inlineHelpText>Holds the actual number of times the API has retried.  Do not edit this field manually.</inlineHelpText>
        <label>Retry Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__TimeoutSeconds__c</fullName>
        <description>How many seconds should we wait for the Lattice APIs to respond?  Maximum is 120.</description>
        <inlineHelpText>How many seconds should we wait for the Lattice APIs to respond?  Maximum is 120.</inlineHelpText>
        <label>Timeout Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Global API Settings</label>
</CustomObject>